# Intense

./: README.md  buildall.sh
libintense/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  cleanup.sh  configure  configure.ac
libintense-aep/: .gitignore  INSTALL  Makefile.in  README  aclocal.m4  cleanup.sh  config.h  configure  configure.ac
libintense-aep/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
libintense-aep/include/: Makefile.am  Makefile.in  intense-aep.hpp
libintense-aep/include/intense-aep/: AEPClient.hpp  AEPCommon.hpp  AEPServer.hpp  AETPLexer.hpp  FlexLexer.hpp  correct_flex.sed  intense_aep_config.hpp.in
libintense-aep/src/: AEPClient.cpp  AEPCommon.cpp  AEPServer.cpp  AEPSharedClient.cpp  AEPSharedServer.cpp  AETPClient.cpp  AETPLexer.cpp  AETPLexer.lpp  AETPServer.cpp  Makefile.am  Makefile.in
libintense-aep/tests/: IntenseAEPTest.cpp  IntenseAEPTest.hpp  IntenseAEPTest0.cpp  IntenseAEPTest1.cpp  IntenseAEPTest2.cpp  IntenseAEPTest3.cpp  Makefile.am  Makefile.in  Test.cpp  Test.hpp
libintense-io/: .gitignore  COPYING  Makefile.in  bootstrap.sh  cleanup.sh  config.h.in  configure  configure.ac  configure.scan
libintense-io/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
libintense-io/include/: Makefile.am  Makefile.in  intense-io.hpp
libintense-io/include/intense-io/: BaseSerialiser.hpp  BinaryBaseSerialiser.hpp  ByteCountFileStream.hpp  CompatibleArchitecture.hpp  FileStream.hpp  LogStream.hpp  XDRBaseSerialiser.hpp  intense_io_config.hpp.in
libintense-io/src/: BinaryBaseSerialiser.cpp  ByteCountFileStream.cpp  FileStream.cpp  LogStream.cpp  Makefile.am  Makefile.in  XDRBaseSerialiser.cpp
libintense-io/tests/: BinarySerialiserTestSource.cpp  IntenseIOTest.cpp  IntenseIOTest.hpp  IntenseIOTest0.cpp  Makefile.am  Makefile.in  Test.cpp  Test.hpp  find_compatible_arch.sh
libintense-io/tests/arch_binary_outputs/: i586_linux_gcc3  sparc_sunos56_gcc3
libintense-java/: GNUmakefile  README
libintense-java/src/intense/: AEther.java  AEtherParticipant.java  AlphaBaseValue.java  BaseValue.java  BinaryBaseValue.java  BoundBaseValue.java  BoundManager.java  CompoundDimension.java  Context.java  ContextDomain.java  ContextManager.java  ContextOp.java  ContextOp.jflex  ContextOpLexer.java  Dimension.java  I.java  IntegerDimension.java  IntenseException.java  IntenseLexer.java  NumberBaseValue.java  OmegaBaseValue.java  Origin.java  Participant.java  RightThreadedAVLTree.java  SetContextDomain.java  StringBaseValue.java  StringDimension.java  StringUtil.java  Version.java
libintense-java/src/intense/aep/: AEPClient.java  AEPCommon.java  AEPException.java  AEPServer.java  AEPSharedClient.java  AEPSharedServer.java  AEPStreamClient.java  AEPStreamServer.java  AEPXDRClient.java  AEPXDRServer.java  AETP.jflex  AETPClient.java  AETPLexer.java  AETPServer.java
libintense-java/src/intense/log/: Log.java  LogException.java  LogStream.java
libintense-java/tests/: GNUmakefile  IntenseAEPTest.java  IntenseAEPTest0.java  IntenseAEPTest1.java  IntenseAEPTest2.java  IntenseAEPTest3.java  IntenseTest.java  IntenseTest0.java  IntenseTest1.java  IntenseTest2.java  IntenseTest3.java  IntenseTest4.java  IntenseTest5.java  IntenseTest6.java  IntenseTest7.java  IntenseTestBase.java  IntenseTestException.java  Test.java  TestException.java
libintense-perl/Intense/: Intense.pm  Intense.xs  MANIFEST  Makefile.PL  README  ppport.h  typemap
libintense-perl/Intense/t/: 1.t
libintense/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
libintense/include/: Makefile.am  Makefile.in  intense.hpp
libintense/include/intense/: AEther.hpp  AlphaBaseValue.hpp  BinaryBaseValue.hpp  BoundBaseValue.hpp  BoundManager.hpp  Context.hpp  ContextDomain.hpp  ContextManager.hpp  ContextOpLexer.hpp  IntenseException.hpp  NumberBaseValue.hpp  OmegaBaseValue.hpp  SetContextDomain.hpp  StringBaseValue.hpp  StringUtil.hpp  container_stringtok.hpp  correct_FlexLexer.h  correct_flex.sed  i  intense_config.hpp.in
libintense/src/: AEther.cpp  BaseValue.cpp  BinaryBaseValue.cpp  BoundBaseValue.cpp  Context.cpp  ContextDomain.cpp  ContextManager.cpp  ContextOp.cpp  ContextOpLexer.cpp  ContextOpLexer.lpp  Dimension.cpp  Makefile.am  Makefile.in  NumberBaseValue.cpp  SetContextDomain.cpp  StringBaseValue.cpp  StringUtil.cpp
libintense/tests/: IntenseTest.cpp  IntenseTest.hpp  IntenseTest0.cpp  IntenseTest1.cpp  IntenseTest2.cpp  IntenseTest3.cpp  IntenseTest4.cpp  IntenseTest5.cpp  IntenseTest6.cpp  IntenseTest7.cpp  Makefile.am  Makefile.in
