INTENSE_IO_INCLUDES = \
intense-io/intense_io_config.hpp \
intense-io/BaseSerialiser.hpp \
intense-io/BinaryBaseSerialiser.hpp \
intense-io/CompatibleArchitecture.hpp \
intense-io/XDRBaseSerialiser.hpp \
intense-io/FileStream.hpp \
intense-io/LogStream.hpp \
intense-io/ByteCountFileStream.hpp

nobase_include_HEADERS = intense-io.hpp $(INTENSE_IO_INCLUDES)
