INTENSE_INCLUDE = \
intense/AEther.hpp \
intense/AlphaBaseValue.hpp \
intense/BinaryBaseValue.hpp \
intense/BoundBaseValue.hpp \
intense/BoundManager.hpp \
intense/ContextDomain.hpp \
intense/Context.hpp \
intense/ContextManager.hpp \
intense/i \
intense/intense_config.hpp \
intense/IntenseException.hpp \
intense/NumberBaseValue.hpp \
intense/OmegaBaseValue.hpp \
intense/SetContextDomain.hpp \
intense/StringBaseValue.hpp \
intense/StringUtil.hpp \
intense/container_stringtok.hpp

nobase_include_HEADERS = intense.hpp $(INTENSE_INCLUDE)
